--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -5,24 +5,21 @@
 <h1>
     Главная страница
 </h1>
-<div class="galery">
-    {% for product in products %}
-    <div class="product-card">
-        <h2>{{ product.name }}</h2>
-        <p>{{ product.description }}</p>
-        <p>{{ product.price }}</p>
-        <img src="{{ product.image_url }}"/>
-        <p>{{ product.category }}</p>
-        <p>{{ product.brand }}</p>
-    </div>
-    {% endfor %}
-</div>
-{% for brand in brands %}
-    <h2>{{ brand.name }} | {{ brand.country }}</h2>
-{% endfor %}
-
 {% for category in categories %}
-    <h2>{{ category.name }} | {{ category.parent_category }}</h2>
+    <h1>{{ category.name }}</h1>
+    <div class="gallery">    
+        {% for product in products %}
+            {% if product.category == category%}
+            <div class="product-card">
+            <img class="product-image" src="{{ product.image_url }}"/>
+            <h2 class="product-name">{{ product.name }}</h2>
+            <p class="product-brand">> By {{ product.brand }}</p>
+            <p class="product-description">{{ product.description }}</p>
+            <p class="product-price">{{ product.price }}₽</p>
+            </div>
+            {% endif %}
+        {% endfor %}
+    </div>
 {% endfor %}
 
 {% endblock %}
