--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,14 +1,17 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bentham|Raleway|Suranna|Trocchi">
+    <link rel="stylesheet" href="{% static 'app/style/styles.css' %}">
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
     {% include "header.html" %}
     <main>
-    {% block content %}{% endblock %}
+        {% block content %}{% endblock %}
     </main>
     {% include "footer.html" %}
 </body>
