--- a/app/static/app/style/styles.css
+++ b/app/static/app/style/styles.css
@@ -2,21 +2,40 @@
     --headerText: #355839;
     --text: #3e3e3e;
     --secondaryText: #828282;
-    --background: #fdf1ec;
-    --primary: #48744d;
-    --secondary: #9dcfa3;
-    --accent: #71c77b;
-
+    --background: #f6ded1;
+    --primary: #48744d; 
 }
 
 body {
     background-color:  var(--background);
+    margin: 0;
+    padding: 0;
 }
 
 h1{
+    margin-left: 20px;
     color: var(--headerText);
-    font-family: 'Bentham';
+    font-family: 'DM Serif Display';
     font-weight: bolder;
+}
+
+header{
+    position:fixed;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    background: rgba(218, 205, 179, 0.37);
+    backdrop-filter: blur(5px);
+    border-radius: 15px;
+    box-shadow: 0 8px 32px 0 rgba(135, 79, 31, 0.37);
+    border: 2px solid rgba(255, 255, 255, 0.13);
+    width: 95%;
+    height: 50px;
+}
+
+footer{
+    margin-left: 10px;
+    color: var(--text);
+    font-family: 'Raleway';
 }
 
 .gallery {
@@ -30,6 +49,7 @@ h1{
     margin: 50px auto;
     border-radius: 7px 7px 7px 7px;
     box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
+    background-color: rgba(255, 255, 255, 0.216);
 }
 
 .product-image {
@@ -41,8 +61,7 @@ h1{
 }
 
 .product-name{
-    text-align:center;
-    font-family: 'Bentham';
+    font-family: 'Roboto Slab';
     color: var(--headerText);
 }
 
@@ -65,4 +84,20 @@ h1{
     font-size: large;
     font-weight: bold;
     color: var(--primary);
+}
+
+.page-header{
+    margin: 0;
+    text-align: center;
+    font-size: 22.5pt;
+    color: var(--primary);
+    font-family: 'DM Serif Display';
+    font-weight:lighter;
+    line-height: 50px;
+}
+
+.divider{
+    border-top: 2px solid var(--primary);
+    margin: 0;
+    padding: 0;
 }
