--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bentham|Raleway|Suranna|Trocchi">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway|Suranna|Roboto Slab|DM Serif Display">
     <link rel="stylesheet" href="{% static 'app/style/styles.css' %}">
     <title>{% block title %}{% endblock %}</title>
 </head>
